compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__imports__import_type_duplicate_with_as_multiline.snap
---
source: compiler-core/src/type_/tests/imports.rs
expression: "import one.{\n          type One as MyOne,\n          type One as MyOne\n        }\n\npub fn main() -> One {\n  todo\n}\n"
---
error: Duplicate type definition
  ┌─ /src/one/two.gleam:2:11
  │
2 │           type One as MyOne,
  │           ^^^^^^^^^^^^^^^^^ First defined here
3 │           type One as MyOne
  │           ^^^^^^^^^^^^^^^^^ Redefined here

The type `MyOne` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.
