compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__imports__import_value_as_submodule2.snap
---
source: compiler-core/src/type_/tests/imports.rs
expression: import one/two/wibble
---
error: Unknown module
  ┌─ /src/one/two.gleam:1:1
  │
1 │ import one/two/wibble
  │ ^^^^^^^^^^^^^^^^^^^^^ Did you mean `one/two`?

No module has been found with the name `one/two/wibble`.
Hint: Did you mean `import one/two.{wibble}`?

See: https://tour.gleam.run/basics/unqualified-imports
